<resources>
    <string name="app_name">Nerve</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">login</string>
    <string name="go_to_register">Do not have an account yet? Sign up!
    </string>
    <string name="register">Sign up</string>
    <string name="go_to_login">Already have an account? Sign in!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="api_url">www.nerve.gq</string>
    <string name="error_register">Error in register</string>
    <string name="not_equals_password_regsiter">Password don\'t match</string>
    <string name="realm_name" translatable="false">hackupc.realm</string>
    <string name="title_activity_login">Login</string>

    <string name="action_settings">Settings</string>
    <string name="room_status">status</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="log_out">Log Out</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="title_activity_twillio">Video call</string>
    <string name="api_musixmatch_url">api.musixmatch.com/ws/1.1</string>
    <string name="musixmatch_api_key">2ff426e3bbe6cb39e0e7d76366e26257</string>
    <string name="select_song_name">Select song</string>
    <string name="select_friend_title">Select a friend</string>
    <string name="initial_fragment_text">Wait for a request or send one</string>
    <string name="start">Start</string>
    <string name="wait_for_participant">Waiting for your friend to accept the request</string>
    <string name="wait_for_start">Push start to sing!</string>
    <string name="new_request"> %1$s has invited you to sing the song %2$s</string>
    <string name="wait_for_start_no_master">The other player not started the game yet</string>
    <string name="num_songs">%1$d songs</string>
    <string name="accept">Accept</string>
    <string name="winner_finish_message">Congratulations! You got more votes than %1$s</string>
    <string name="looser_finish_message">Sorry, %1$s has gotten more votes than you</string>
    <string name="play_again">Play again</string>
    <string name="try_again">Try again</string>

</resources>
